--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@mantine/core": "^7.5.1",
+    "@mantine/form": "^7.5.1",
     "@mantine/hooks": "^7.5.1",
+    "@tabler/icons-react": "^2.47.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.14.1"
   },
   "devDependencies": {
     "@types/node": "^20",
