--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-mdx-remote": "^4.4.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-player": "^2.14.1"
+    "react-player": "^2.14.1",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
